# BookFinder-Api

./: .env.example  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
api/: controller.py  database.py  main.py  models.py  schemas.py  settings.py
api/routes/: auth.py  books.py  users.py  wishlist.py
migrations/: env.py
migrations/versions/: 09aeacb2dcbb_create_tables.py  5b26540c8f3c_lazy_noload_on_users_books.py  5f1ed03bc7d2_lazy_select_on_users_books.py
